prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/duplicate_key.nut
// EXPECT_ERROR: "duplicate key"
let t = {
    a = 1,
    a = 2
}
